# Ndetect

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
include/: categorizer.h  detector.h  face_modifier.h  group_writer.h  invalid_params_exception.h  knn_matcher.h  make_unique.hpp  output_modifier.h  stdafx.h  video_loader.h
src/: Main.cpp  categorizer.cpp  detector.cpp  face_modifier.cpp  group_writer.cpp  invalid_params_exception.cpp  knn_matcher.cpp  output_modifier.cpp  video_loader.cpp
src/include/: invalid_params_exception.h  stdafx.h
